tests/error/array_no_member.gw
#! [contains] has no member
int i[2][2];
i[0].test;
